--- a/styles/style.scss
+++ b/styles/style.scss
@@ -414,7 +414,14 @@ footer {
             width: 100%;
             input[type=text] {
                 width: 100%;
-                padding: 0.5rem 1rem;
+                padding: 1rem 1rem;
+                border: 0.5px solid lightgray;
+                border-radius: 4px;
+                outline: none;
+            }
+            input::placeholder {
+                color: $black;
+                font-size: 0.9rem;
             }
         }
     }
@@ -426,6 +433,22 @@ footer {
             color: $white;
         }
     }
+}
+
+///////////////////CONTACT PAGE/////////////////////
+
+.contactBanner {
+    background-image: url(../assets/contact.jpg);
+    @include bgImgStyling(center, cover, no-repeat);
+    @include flexStyle(flex, row, center, center);
+    height: 45vh;
+    h2 {
+        color: $white;
+        text-transform: capitalize;
+        font-weight: 500;
+        font-size: 2rem;
+    }
+
 }
 
 
