--- a/styles/style.css
+++ b/styles/style.css
@@ -421,6 +421,11 @@ header nav .wrapper ul li svg {
   all: revert;
   width: 1.75rem;
 }
+header nav .hamburger {
+  font-size: 1.5rem;
+  color: #1A2428;
+  display: none;
+}
 
 header {
   height: 100vh;
