--- a/styles/style.scss
+++ b/styles/style.scss
@@ -441,19 +441,53 @@ footer {
 }
 
 ///////////////////CONTACT PAGE/////////////////////
-
-.contactBanner {
+.headerContact {
+    height: 100%;
+    .contactBanner {
     background-image: url(../assets/contact.jpg);
     @include bgImgStyling(center, cover, no-repeat);
     @include flexStyle(flex, row, center, center);
     height: 45vh;
-    h2 {
-        color: $white;
-        text-transform: capitalize;
-        font-weight: 500;
-        font-size: 2rem;
+        h2 {
+            color: $white;
+            text-transform: capitalize;
+            font-weight: 500;
+            font-size: 2rem;
+        }
     }
+}
 
+.contact {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.contact .wrapper {
+    height: 100%;
+    .textContainer {
+        width: 47.5%;
+        height: 80%;
+        .contactInfo {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        li {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-bottom: 3rem;
+            padding: 2.5rem 0 2.5rem 3rem; 
+            box-shadow: 0 0 3px (rgba(0, 0, 0, 0.25));         
+            border-left: 10px solid $plantGreen;
+        }
+        .contactForm {
+            background-color: green;
+            border: 1px solid $black;
+            box-shadow: 0 0 3px (rgba(0, 0, 0, 0.25));  
+        }       
+    }
 }
 
 
