--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,6 +16,9 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     $plantGreen: #207200;
     $white: #fff;
     $black: #1A2428;
+    $lightgrey: #EAEAEA;
+    $boxShadow: 0 0 15px (rgba(189, 189, 189, 0.4));
+    $borderInput: 1.5px solid $lightgrey;
 
 //mixins 
 @mixin flexStyle($display, $flexDirection, $justifyContent, $alignItems) {
@@ -179,12 +182,15 @@ header nav {
             }
         }
     }
-    .hamburger {
-        font-size: 1.5rem;
-        color: $black;
+    .hamburgerContainer {
         display: none;
+        .hamburger {
+            font-size: 1.5rem;
+            color: $black;
+        }
     }
 }
+
 
 //header section//
 header {
@@ -394,10 +400,9 @@ footer {
                 height: 100%;
             }
         }
-    .third li {
-        .imageContainer {
-            width: calc(100% / 3);
-            }
+    .third .imageContainer {
+        width: calc(100% / 3);
+        }
         .textContainer {
             width: 75%;
             padding-left: 1rem;
@@ -406,17 +411,16 @@ footer {
             }
             .item {
                 @include fontStyling($secondaryFont, 0.8rem, 600);
-                @include textStyling( 0, 0, 0rem, none);
+                padding: 0;
             }
         }
-    }
     .fourth {
         padding-left: 1.7rem;
         form {
             padding-top: 0.5rem;
             width: 100%;
             input[type=text] {
-                @include boxModel(100%, auto, 1rem, 0.5px solid #BBBBBB, 4px, none);
+                @include boxModel(100%, auto, 1rem, $borderInput, 4px, none);
                 outline: none;
             }
             input::placeholder {
@@ -456,25 +460,48 @@ footer {
 //contact section//
 .contact {
     height: 100vh;
-    display: flex;
-    align-items: center;
-}
-
-.contact .wrapper {
-    height: 100%;
-    align-items: flex-start;
-    .contactContainer {
-        width: 48%;
-        height: 80%;
-        li {
-            @include flexStyle(flex, column, center, flex-start);
-            @include boxModel(auto, auto, 2.5rem 0 2.5rem 3.5rem, none, none, 0 0 3rem 0);
-            box-shadow: 0 0 15px (rgba(121, 121, 121, 0.4));         
+    .wrapper {
+        height: 100%;
+        align-items: flex-start;
+        .textContainer {
+            height: 100%;
+            width: 47.5%;
+        }
+        .contactContainer li {
+            @include flexStyle(flex, column, space-between, flex-start);
+            @include boxModel(auto, auto, 2.75rem 0 2.75rem 3rem, none, none, 0 0 3rem 0);
             border-left: 10px solid $plantGreen;
+            box-shadow: $boxShadow;         
+            h3 {
+                padding-bottom: 0.5rem;
+            }
+        }
+        form {
+            text-align: center;
+            padding: 3rem;
+            box-shadow: $boxShadow;         
+            .row1and2 {
+                flex-wrap: wrap;
+                input {
+                    @include boxModel(48%, auto, 1rem, $borderInput, 6px, 0 0 2rem 0);
+                }
+            }
+            .row3 input,
+            textarea {
+                @include boxModel(100%, auto, 1rem, $borderInput, 6px, 0 0 2rem 0);
+            }
+            input[type=text]::placeholder,
+            textarea::placeholder {
+                font-size: 0.85rem;
+            }
+        }
+        button {
+            @include boxModel(auto, auto, 1.75rem 2.25rem, none, 2.25rem, none);
+            font-size: 1rem;
         }
     }
 }
-   
+
     
 
 
