--- a/styles/style.css
+++ b/styles/style.css
@@ -429,6 +429,31 @@ header nav .hamburgerContainer .hamburger {
   color: #1A2428;
 }
 
+.navHover {
+  position: relative;
+}
+
+.navHover a:hover {
+  color: #207200;
+}
+
+.navHover::after {
+  content: "";
+  height: 5px;
+  width: 100%;
+  background-color: #5EA85E;
+  position: absolute;
+  left: 0;
+  bottom: -1rem;
+  opacity: 0;
+  transition: all 0.25s;
+  pointer-events: none;
+}
+
+.navHover:hover::after {
+  opacity: 1;
+}
+
 header {
   height: 100vh;
   overflow: hidden;
@@ -478,7 +503,7 @@ header {
 @keyframes slidein {
   from {
     margin-right: 100%;
-    width: 300%;
+    width: 200%;
   }
   to {
     margin-left: 0%;
